// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`HtmlAppBackend set_app_output should not replace input elements when setting the value attribute 1`] = `
Object {
  "appId": "testPortal",
  "type": "update_html_app",
  "updates": Array [
    Object {
      "attributeName": undefined,
      "attributeNamespace": undefined,
      "listenerDelta": 1,
      "listenerName": "input",
      "oldValue": undefined,
      "type": "event_listener",
    },
    Object {
      "addedNodes": Array [
        Object {
          "__id": "1",
          "attributes": Array [],
          "childNodes": Array [
            Object {
              "__id": "2",
              "attributes": Array [
                Object {
                  "name": "value",
                  "ns": null,
                  "value": "",
                },
              ],
              "childNodes": Array [],
              "namespace": "http://www.w3.org/1999/xhtml",
              "nodeName": "input",
              "nodeType": 1,
              "style": Object {},
            },
          ],
          "namespace": "http://www.w3.org/1999/xhtml",
          "nodeName": "div",
          "nodeType": 1,
          "style": Object {},
        },
      ],
      "attributeName": undefined,
      "attributeNamespace": undefined,
      "listenerDelta": undefined,
      "listenerName": undefined,
      "nextSibling": undefined,
      "oldValue": undefined,
      "previousSibling": undefined,
      "removedNodes": Array [],
      "target": Object {
        "__id": "0",
        "attributes": Array [],
        "childNodes": Array [
          Object {
            "__id": "1",
            "attributes": Array [],
            "childNodes": Array [
              Object {
                "__id": "2",
                "attributes": Array [
                  Object {
                    "name": "value",
                    "ns": null,
                    "value": "",
                  },
                ],
                "childNodes": Array [],
                "namespace": "http://www.w3.org/1999/xhtml",
                "nodeName": "input",
                "nodeType": 1,
                "style": Object {},
              },
            ],
            "namespace": "http://www.w3.org/1999/xhtml",
            "nodeName": "div",
            "nodeType": 1,
            "style": Object {},
          },
        ],
        "nodeName": "BODY",
        "nodeType": 1,
        "style": Object {},
      },
      "type": "childList",
    },
  ],
  Symbol(UNMAPPABLE): true,
}
`;

exports[`HtmlAppBackend set_app_output should not replace input elements when setting the value attribute 2`] = `
Object {
  "appId": "testPortal",
  "type": "update_html_app",
  "updates": Array [
    Object {
      "attributeName": "value",
      "attributeNamespace": null,
      "listenerDelta": undefined,
      "listenerName": undefined,
      "oldValue": "",
      "target": Object {
        "__id": "2",
        "attributes": Array [
          Object {
            "name": "value",
            "value": "my value",
          },
        ],
      },
      "type": "attributes",
    },
  ],
  Symbol(UNMAPPABLE): true,
}
`;

exports[`HtmlAppBackend set_app_output should render the most recent output when the app is setup 1`] = `
Object {
  "appId": "testPortal",
  "type": "update_html_app",
  "updates": Array [
    Object {
      "addedNodes": Array [
        Object {
          "__id": "1",
          "attributes": Array [],
          "childNodes": Array [
            Object {
              "__id": "2",
              "data": "Hello",
              "nodeType": 3,
            },
          ],
          "namespace": "http://www.w3.org/1999/xhtml",
          "nodeName": "h1",
          "nodeType": 1,
          "style": Object {},
        },
      ],
      "attributeName": undefined,
      "attributeNamespace": undefined,
      "listenerDelta": undefined,
      "listenerName": undefined,
      "nextSibling": undefined,
      "oldValue": undefined,
      "previousSibling": undefined,
      "removedNodes": Array [],
      "target": Object {
        "__id": "0",
        "attributes": Array [],
        "childNodes": Array [
          Object {
            "__id": "1",
            "attributes": Array [],
            "childNodes": Array [
              Object {
                "__id": "2",
                "data": "Hello",
                "nodeType": 3,
              },
            ],
            "namespace": "http://www.w3.org/1999/xhtml",
            "nodeName": "h1",
            "nodeType": 1,
            "style": Object {},
          },
        ],
        "nodeName": "BODY",
        "nodeType": 1,
        "style": Object {},
      },
      "type": "childList",
    },
  ],
  Symbol(UNMAPPABLE): true,
}
`;

exports[`HtmlAppBackend set_app_output should render the output as a preact component 1`] = `
Object {
  "appId": "testPortal",
  "type": "update_html_app",
  "updates": Array [
    Object {
      "addedNodes": Array [
        Object {
          "__id": "1",
          "attributes": Array [],
          "childNodes": Array [
            Object {
              "__id": "2",
              "data": "Hello",
              "nodeType": 3,
            },
          ],
          "namespace": "http://www.w3.org/1999/xhtml",
          "nodeName": "h1",
          "nodeType": 1,
          "style": Object {},
        },
      ],
      "attributeName": undefined,
      "attributeNamespace": undefined,
      "listenerDelta": undefined,
      "listenerName": undefined,
      "nextSibling": undefined,
      "oldValue": undefined,
      "previousSibling": undefined,
      "removedNodes": Array [],
      "target": Object {
        "__id": "0",
        "attributes": Array [],
        "childNodes": Array [
          Object {
            "__id": "1",
            "attributes": Array [],
            "childNodes": Array [
              Object {
                "__id": "2",
                "data": "Hello",
                "nodeType": 3,
              },
            ],
            "namespace": "http://www.w3.org/1999/xhtml",
            "nodeName": "h1",
            "nodeType": 1,
            "style": Object {},
          },
        ],
        "nodeName": "BODY",
        "nodeType": 1,
        "style": Object {},
      },
      "type": "childList",
    },
  ],
  Symbol(UNMAPPABLE): true,
}
`;
